--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:mortegagarcia
+# logging.level.web=DEBUG
+spring.jpa.show-sql= true
+
+# ----------------------------------------------------------------
+# H2 Database
+# ----------------------------------------------------------------
+# spring.jpa.show-sql=true
+# spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:mortegagarcia
+
+
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database= MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/school_gradebook?user=gradebookapp&password=password
+spring.datasource.data-username=gradebookapp
+spring.datasource.data-password=password
+# spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+
