--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # logging.level.web=DEBUG
-spring.jpa.show-sql= true
+spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 # ----------------------------------------------------------------
 # H2 Database
@@ -9,13 +11,12 @@ spring.jpa.show-sql= true
 # spring.datasource.url=jdbc:h2:mem:mortegagarcia
 
 
-
-
+# ----------------------------------------------------------------
+# MySQL Database
+# ----------------------------------------------------------------
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database= MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/school_gradebook?user=gradebookapp&password=password
 spring.datasource.data-username=gradebookapp
 spring.datasource.data-password=password
 # spring.datasource.driverClassName = com.mysql.jdbc.Driver
-
-
