--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 # spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=trace
+# logging.level.org.hibernate.type.descriptor.sql=trace
 
 # ----------------------------------------------------------------
 # H2 Database
