Cleaned Project Dependencies Reformatted Code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#spring.security.user.name=admin
+#spring.security.user.password=1234
 # logging.level.web=DEBUG
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
