--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,1 @@
-#spring.security.user.name=admin
-#spring.security.user.password=1234
-# logging.level.web=DEBUG
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=true
-#server.error.include-stacktrace=never
-# spring.jpa.properties.hibernate.format_sql=true
-# logging.level.org.hibernate.type.descriptor.sql=trace
-# ----------------------------------------------------------------
-# MySQL Database
-# ----------------------------------------------------------------
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/school_gradebook?user=gradebookapp&password=password
-spring.datasource.data-username=gradebookapp
-spring.datasource.data-password=password
-# spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.profiles.include=prod
