--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,5 +8,5 @@ spring.jpa.properties.hibernate.format_sql=false
 server.error.whitelabel.enabled=false
 logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.org.springframework.security=DEBUG
-#logging.level.web=debug
+logging.level.web=DEBUG
 server.error.include-stacktrace=always
