--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -3,13 +3,14 @@
 # ----------------------------------------------------------------
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:mortegagarcia
-spring.datasource.data=classpath:data-dev.sql
+spring.datasource.data=classpath:data-h2.sql
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.properties.hibernate.hbm2ddl.import_files=data-dev.sql
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=data-h2.sql
 spring.jpa.hibernate.ddl-auto=create-drop
+
 
 
 
