--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,9 +1,13 @@
 # ----------------------------------------------------------------
 # MySQL Database
 # ----------------------------------------------------------------
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/school_gradebook?user=gradebookapp&password=password
 spring.datasource.data-username=gradebookapp
 spring.datasource.data-password=password
-# spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.datasource.data=classpath:data.sql
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
