--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,7 +6,7 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 server.error.whitelabel.enabled=false
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.org.springframework.security=DEBUG
 #logging.level.web=debug
 server.error.include-stacktrace=always
