Removed all of Spring Security. Learning more about Spring Security and Security ACL before proceeding implementation.

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,8 +1,8 @@
 # ----------------------------------------------------------------
 # MySQL Database
 # ----------------------------------------------------------------
-#spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/school_gradebook?user=gradebookapp&password=password
